--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,7 @@
     <meta name="description" content="Source code generated using layoutit.com">
     <meta name="author" content="LayoutIt!">
 
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/0c2b640fe0.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans+TC&display=swap" rel="stylesheet">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -49,7 +49,7 @@
           <!--weather display-->
           <div class="row weather">
             <div class="col-md-4">
-
+              <!-- 原本的
               <div class="card">
                 <div class="card-block">
                   <h5 class="card-title">
@@ -62,11 +62,96 @@
                     17-18°
                   </p>
                 </div>
-              </div>
+              </div>-->
+              
+              <!--新的 weather display-->
+              <section class="card-weather">
+              
+                <div class="card-block">
+                  <h5 class="card-title">
+                    基隆市
+                  </h5>
+                  <span class="weather-display">
+                    <i class="fas fa-cloud-showers-heavy"></i>
+                  </span>
+                  <p class="card-text">
+                    17-18°
+                  </p>
+                </div>
 
+                <div class="card-block">
+                  <h5 class="card-title">
+                    基隆市
+                  </h5>
+                  <span class="weather-display">
+                    <i class="fas fa-cloud-sun"></i>
+                  </span>
+                  <p class="card-text">
+                    17-18°
+                  </p>
+                </div>
+
+                <div class="card-block">
+                  <h5 class="card-title">
+                    基隆市
+                  </h5>
+                  <span class="weather-display">
+                    <i class="fas fa-sun"></i>
+                  </span>
+                  <p class="card-text">
+                    17-18°
+                  </p>
+                </div>
+
+                <div class="card-block">
+                  <h5 class="card-title">
+                    基隆市
+                  </h5>
+                  <span class="weather-display">
+                    <i class="fas fa-sun"></i>
+                  </span>
+                  <p class="card-text">
+                    17-18°
+                  </p>
+                </div>
+
+                <div class="card-block">
+                  <h5 class="card-title">
+                    基隆市
+                  </h5>
+                  <span class="weather-display">
+                    <i class="fas fa-sun"></i>
+                  </span>
+                  <p class="card-text">
+                    17-18°
+                  </p>
+                </div>
+                
+                
+
+               
+              </section>
 
             </div>
           </div>
+          
+
+          <!--weather display 修改下面的template
+          <section class="hero-section">
+            <div class="card-grid">
+              <a class="card" href="#">
+                <div class="card__background" style="background-image: url(https://cdn.pixabay.com/photo/2014/11/05/15/57/salmon-518032_1280.jpg)"></div>
+                <div class="card__content">
+                  <p class="card__category">基隆市</p>
+                  <span class="weather-display">
+                    <i class="fas fa-cloud-showers-heavy"></i>
+                  </span>
+                  <p class="card__temperature">17-18°</p>
+                </div>
+              </a>
+            </div>
+          </section>
+          -->
 
           <!--popular-->
           <h3 class="category">
@@ -120,7 +205,7 @@
       </div>
     </div>
 
-    <script src="https://kit.fontawesome.com/0c2b640fe0.js" crossorigin="anonymous"></script>
+    
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/scripts.js"></script>
