--- a/views/index.ejs
+++ b/views/index.ejs
@@ -128,8 +128,6 @@
                 </div>
                 
                 
-
-               
               </section>
 
             </div>
@@ -173,6 +171,13 @@
                 <div class="card__content">
                   <!--<p class="card__category">Category</p>-->
                   <h3 class="card__heading">超精緻粉紅鮭魚排</h3>
+                </div>
+              </a>
+              <a class="card" href="#">
+                <div class="card__background" style="background-image: url(https://cdn.pixabay.com/photo/2016/10/23/09/37/restaurant-1762493_1280.jpg)"></div>
+                <div class="card__content">
+                  <!--<p class="card__category">Category</p>-->
+                  <h3 class="card__heading">台式營養肉蛋炒飯</h3>
                 </div>
               </a>
               <a class="card" href="#">
